--- a/calculator.html
+++ b/calculator.html
@@ -15,7 +15,7 @@
 
         <input id="display" disabled>
         <div id="buttons">
-            <button onclick="clear()">C</button>
+            <button onclick="clearDisplay()">C</button>
             <button onclick="deletePrevious()">DEL</button>
             <button onclick="appendToDisplay('%')">%</button>
             <button onclick="appendToDisplay('/')">/</button>
